syntax = "proto3";
package attacks;

import "attacks.shared.proto";

/*
-- BruteforceSubdomain
 */

// Request for starting a bruteforce subdomain attack
message BruteforceSubdomainRequest {
  // A unique id that identifies the attack
  string attack_uuid = 1;
  // The domain to use as base name. It shouldn't end in a . like DNS names.
  string domain = 2;
  // Path to a wordlist that can be used for subdomain enumeration.
  //
  // The entries in the wordlist are assumed to be line seperated.
  string wordlist_path = 3;
  // Maximum of concurrent tasks that should be spawned
  //
  // 0 means, that there should be no limit.
  uint32 concurrent_limit = 4;
}

// Response streamed by an bruteforce subdomain attack
message BruteforceSubdomainResponse {
  // Found record
  shared.DNSRecord record = 1;
}

/*
-- TcpPortScan
 */

// Request for starting a tcp port scan attack
message TcpPortScanRequest {
  // A unique id that identifier the attack
  string attack_uuid = 1;
  // The ip addresses / networks to scan
  repeated attacks.shared.NetOrAddress targets = 2;
  // List of single ports and port ranges
  //
  // If no values are supplied, 1-65535 is used as default
  repeated PortOrRange ports = 3;
  // The time to wait until a connection is considered failed.
  //
  // The timeout is specified in milliseconds.
  uint64 timeout = 4;
  // The concurrent task limit
  uint32 concurrent_limit = 5;
  // The number of times the connection should be retried if it failed.
  uint32 max_retries = 6;
  // The interval that should be wait between retries on a port.
  //
  // The interval is specified in milliseconds.
  uint64 retry_interval = 7;
  // Skips the initial icmp check.
  //
  // All hosts are assumed to be reachable
  bool skip_icmp_check = 8;
}

// An (inclusive) range of ports
message PortRange {
  // The first port number in this range
  uint32 start = 1;
  // The last port number in this range
  uint32 end = 2;
}

// Either a single port or a range of them
message PortOrRange {
  // Workaround field to store a `oneof`
  oneof port_or_range {
    // A single port
    uint32 single = 1;

    // An (inclusive) range of ports
    PortRange range = 2;
  }
}

// Response streamed by an tcp port scan attack
message TcpPortScanResponse {
  // Address
  attacks.shared.Address address = 1;
  // Port value
  uint32 port = 2;
}

/*
--- Certificate Transparency
 */

// Certificate transparency request
message CertificateTransparencyRequest {
  // A unique id that identifier the attack
  string attack_uuid = 1;
  // The target domain to query
  string target = 2;
  // Also include already expired certificates
  bool include_expired = 3;
  // The number of times the connection should be retried if it failed.
  uint32 max_retries = 4;
  // The interval to wait in between the retries
  // Specified in milliseconds.
  uint64 retry_interval = 5;
}


// Response to a certificate transparency request
message CertificateTransparencyResponse {
  // List of cert entries
  repeated shared.CertEntry entries = 1;
}

/*
 * Service Detection
 */

// Service detection request
message ServiceDetectionRequest {
  // A unique id that identifier the attack
  string attack_uuid = 1;
  // The ip address to connect to
  attacks.shared.Address address = 2;
  // The port to connect to
  uint32 port = 3;
  // The interval to wait for a response after connecting and sending an optional payload.
  // Specified in milliseconds.
  uint64 timeout = 4;
}

// Response to a service detection request
message ServiceDetectionResponse {
  // The ip address the service was found on
  attacks.shared.Address address = 3;
  // The port the service was found on
  uint32 port = 4;
  // Indicates how many services are given and how they are to be interpreted
  ServiceCertainty responseType = 1;
  // List of services, the interpretation of this field depends on the `responseType`
  repeated string services = 2;
}

// Indicates how many services are returned in a ServiceCertainty and how they are to be interpreted
enum ServiceCertainty {
  // The service is unknown
  UNKNOWN = 0;
  // The service might be one of the list
  MAYBE = 1;
  // The service has been identified
  DEFINITELY = 2;
}

// Service detection request for all specified ports
message UdpServiceDetectionRequest {
  // A unique id that identifier the attack
  string attack_uuid = 1;
  // The ip address to connect to
  attacks.shared.Address address = 2;
  // List of single ports and port ranges
  //
  // If no values are supplied, 1-65535 is used as default
  repeated PortOrRange ports = 3;
  // The concurrent task limit
  uint32 concurrent_limit = 4;
  // The number of times the packet sending should be retried if no response was received.
  uint32 max_retries = 5;
  // The interval that should be wait between retries on a port.
  //
  // The interval is specified in milliseconds.
  uint64 retry_interval = 6;
  // The time to wait until a connection is considered failed.
  //
  // The timeout is specified in milliseconds.
  uint64 timeout = 7;
}

// Response to a service detection request
message UdpServiceDetectionResponse {
  // The ip address the service was found on
  attacks.shared.Address address = 1;
  // Port value
  uint32 port = 2;
  // Indicates how many services are given and how they are to be interpreted
  ServiceCertainty certainty = 3;
  // List of services, the interpretation of this field depends on the `certainty`
  repeated string services = 4;
}

/*
 * Hosts alive check
 */

// Request for checking if hosts are alive
message HostsAliveRequest {
  // A unique id that identifier the attack
  string attack_uuid = 1;
  // The hosts that should be checked
  repeated attacks.shared.NetOrAddress targets = 2;
  // The timeout, specified in milliseconds.
  uint64 timeout = 3;
  // The concurrent task limit
  uint32 concurrent_limit = 4;
}

// Response for checking which hosts are alive
message HostsAliveResponse {
  // the hosts that responded
  attacks.shared.Address host = 1;
}

/*
 * DNS resolution
 */
message DnsResolutionRequest {
  // A unique id that identifier the attack
  string attack_uuid = 1;
  // The domains to resolve
  repeated string targets = 2;
  // Maximum of concurrent tasks that should be spawned
  //
  // 0 means, that there should be no limit.
  uint32 concurrent_limit = 3;
}

// Response streamed by a dns resolution attack
message DnsResolutionResponse {
  // Found record
  shared.DNSRecord record = 1;
}

/*
 * testssl.sh
 */

// Request for running testssl.sh
message TestSSLRequest {
  // A unique id that identifier the attack
  string attack_uuid = 1;
  // The domain used for SNI and cert validity check
  string uri = 2;
  // The ip address to scan
  shared.Address ip = 3;
  // The port to scan
  uint32 port = 4;
  // Timeout for TCP handshakes in seconds
  optional uint64 connect_timeout = 5;
  // Timeout for `openssl` connections in seconds
  optional uint64 openssl_timeout = 6;
  // Enable ip v6
  optional bool v6 = 7;
  // Set the `BASICAUTH` header when checking http headers
  optional BasicAuth basic_auth = 8;
  // Run against a STARTTLS enabled protocol
  optional StartTLSProtocol starttls = 9;
  // Which scans `testssl.sh` should run
  optional TestSSLScans scans = 10;
}

// The `BASICAUTH` header
message BasicAuth {
  // The username
  string username = 1;
  // The password
  string password = 2;
}

// Protocols to select from when using `testssl.sh`'s `--starttls` option
enum StartTLSProtocol {
  // FTP
  FTP      = 0;
  // SMTP
  SMTP     = 1;
  // POP3
  POP3     = 2;
  // IMAP
  IMAP     = 3;
  // XMPP
  XMPP     = 4;
  // LMTP
  LMTP     = 5;
  // NNTP
  NNTP     = 6;
  // Postgres
  Postgres = 7;
  // MySQL
  MySQL    = 8;
}

/// Config option which scans `testssl.sh` should run
message TestSSLScans {
  // Workaround field to store a `oneof`
  oneof testssl_scans {
    // Either run all scans or just the default ones
    bool all = 1;

    // Select the scans to run manually
    TestSSLScansManual manual = 2;
  }
}

// Select the scans to run manually
//
// Each field (except `cipher_tests_...`) correspond directly to a section in `testssl.sh`'s output
message TestSSLScansManual {
  /// Enables [`ScanResult`]'s `protocols` section
  bool protocols = 1;

  /// Enables [`ScanResult`]'s `grease` section
  bool grease = 2;

  /// Enables [`ScanResult`]'s `ciphers` section
  bool ciphers = 3;

  /// Enables [`ScanResult`]'s `pfs` section
  bool pfs = 4;

  /// Enables [`ScanResult`]'s `server_preferences` section
  bool server_preferences = 5;

  /// Enables [`ScanResult`]'s `server_defaults` section
  bool server_defaults = 6;

  /// Enables [`ScanResult`]'s `header_response` section
  bool header_response = 7;

  /// Enables [`ScanResult`]'s `vulnerabilities` section
  bool vulnerabilities = 8;

  /// Enables [`ScanResult`]'s `cipher_tests` section
  bool cipher_tests_all = 9;

  /// Enables [`ScanResult`]'s `cipher_tests` section
  bool cipher_tests_per_proto = 10;

  /// Enables [`ScanResult`]'s `browser_simulations` section
  bool browser_simulations = 11;
}

// Response to a test ssl request
message TestSSLResponse {
  // The services' scan results or their errors
  repeated TestSSLService services = 1;
}

// A service's scan results or an error
message TestSSLService {
  // Workaround field to store a `oneof`
  oneof testssl_service {
    // The result from scanning a service
    TestSSLScanResult result = 1;

    // Some error prevented a service from being scanned
    TestSSLFinding error = 2;
  }
}

// A service's scan results
message TestSSLScanResult {
  // The original user target this result belongs to
  string target_host = 1;

  // The scanned ip address
  string ip = 2;

  // The scanned port
  string port = 3;

  // The ip address' rDNS name
  string rdns = 4;

  // The detected service
  string service = 5;

  // TODO: not found yet in the wild
  // optional string hostname = 6;

  // Some sanity checks which can't be disabled
  repeated TestSSLFinding pretest = 7;

  // Which tls protocols are supported
  repeated TestSSLFinding protocols = 8;

  // Server implementation bugs and [GREASE](https://www.ietf.org/archive/id/draft-ietf-tls-grease-01.txt)
  repeated TestSSLFinding grease = 9;

  // Which cipher suites are supported
  repeated TestSSLFinding ciphers = 10;

  // Checks robust (perfect) forward secrecy key exchange
  repeated TestSSLFinding pfs = 11;

  // The server's preferences
  repeated TestSSLFinding server_preferences = 12;

  // The server's defaults
  repeated TestSSLFinding server_defaults = 13;

  // The http header set by the server
  repeated TestSSLFinding header_response = 14;

  // List of several vulnerabilities
  repeated TestSSLFinding vulnerabilities = 15;

  // Which concrete ciphers are supported
  //
  // Depending on the option `testssl` is invoked with,
  // this is either a list of all ciphers or a list of all cipher per tls protocol.
  repeated TestSSLFinding cipher_tests = 16;

  // Which browser is able to establish a connection
  repeated TestSSLFinding browser_simulations = 17;
}

// A single test's result or testssl log message
message TestSSLFinding {
  // The test's id
  string id = 1;
  // The result's severity
  TestSSLSeverity severity = 2;
  // The test's result
  string finding = 3;

  // The associated CVE
  optional string cve = 4;
  // The associated CWE
  optional string cwe = 5;
  // The MITRE ATT&CK tactic and technique associated with this weakness
  optional shared.AttackTechnique mitre = 6;
}

// A TestSSLFinding's severity
enum TestSSLSeverity {
  // A debug level log message
  Debug    = 0;
  // An info level log message
  Info     = 1;
  // A warning level log message
  Warn     = 2;
  // An error level log message
  Fatal    = 3;

  // The test's result doesn't pose an issue
  Ok       = 4;
  // The test's result pose a low priority issue
  Low      = 5;
  // The test's result pose a medium priority issue
  Medium   = 6;
  // The test's result pose a high priority issue
  High     = 7;
  // The test's result pose a critical priority issue
  Critical = 8;
}


// Implemented by leech; allows kraken to request attack from a leech
service ReqAttackService {
  rpc BruteforceSubdomains(BruteforceSubdomainRequest) returns (stream BruteforceSubdomainResponse);
  rpc RunTcpPortScan(TcpPortScanRequest) returns (stream TcpPortScanResponse);
  rpc QueryCertificateTransparency(CertificateTransparencyRequest) returns (CertificateTransparencyResponse);
  rpc ServiceDetection(ServiceDetectionRequest) returns (ServiceDetectionResponse);
  rpc UdpServiceDetection(UdpServiceDetectionRequest) returns (stream UdpServiceDetectionResponse);
  rpc HostsAliveCheck(HostsAliveRequest) returns (stream HostsAliveResponse);
  rpc DnsResolution(DnsResolutionRequest) returns (stream DnsResolutionResponse);
  rpc TestSSL(TestSSLRequest) returns (TestSSLResponse);
}

/*
------------------------ PushAttack -------------------------------
 */

// Request to push an attack which has been started manually through the leech's cli
message PushAttackRequest {
  // The uuid of a workspace
  string workspace_uuid = 1;

  // The user's api key
  string api_key = 2;

  // The attack's type as well as its response
  oneof response {
    // Response streamed by an bruteforce subdomain attack
    RepeatedBruteforceSubdomainResponse bruteforce_subdomain = 3;
    // Response streamed by an tcp port scan attack
    RepeatedTcpPortScanResponse tcp_port_scan = 4;
    // Response to a certificate transparency request
    CertificateTransparencyResponse certificate_transparency = 5;
    // Response to a service detection request
    ServiceDetectionResponse service_detection = 6;
    // Response for checking which hosts are alive
    RepeatedHostsAliveResponse hosts_alive = 7;
    // Response streamed by a dns resolution attack
    RepeatedDnsResolutionResponse dns_resolution = 8;
    // Response streamed by a dns resolution attack
    RepeatedUdpServiceDetectionResponse udp_service_detection = 9;
    // Response for running testssl.sh
    TestSSLResponse testssl = 10;
  }
}

// Thin wrapper to have a `repeated BruteforceSubdomainResponse` in a `oneof`
message RepeatedBruteforceSubdomainResponse {
  // repeated BruteforceSubdomainResponse
  repeated BruteforceSubdomainResponse responses = 1;
}
// Thin wrapper to have a `repeated TcpPortScanResponse` in a `oneof`
message RepeatedTcpPortScanResponse {
  // repeated TcpPortScanResponse
  repeated TcpPortScanResponse responses = 1;
}
// Thin wrapper to have a `repeated HostsAliveResponse` in a `oneof`
message RepeatedHostsAliveResponse {
  // repeated HostsAliveResponse
  repeated HostsAliveResponse responses = 1;
}
// Thin wrapper to have a `repeated DnsResolutionResponse` in a `oneof`
message RepeatedDnsResolutionResponse {
  // repeated DnsResolutionResponse
  repeated DnsResolutionResponse responses = 1;
}
// Thin wrapper to have a `repeated UdpServiceDetectionResponse` in a `oneof`
message RepeatedUdpServiceDetectionResponse {
  // repeated UdpServiceDetectionResponse
  repeated UdpServiceDetectionResponse responses = 1;
}

// Response to a manually pushed attack
message PushAttackResponse {
  // The attack uuid assigned by kraken
  string uuid = 1;
}

// Implemented by kraken; allows leeches to push manual attacks via cli
service PushAttackService {
  rpc PushAttack(PushAttackRequest) returns (PushAttackResponse);
}


/*
------------------------ Backlog -------------------------------
 */

// Request for a chunk of responses to be processed
message BacklogRequest {
  // Responses left from some previous attacks
  repeated AnyAttackResponse responses = 1;
}

// Response to a backlog request
//
// Might contain additional information in the future:
// What did go wrong (custom error type)? Which responses could be processed?
message BacklogResponse {}

// union of all messages which might be returned as response to any attack request
message AnyAttackResponse {
  // the attack that produced the response
  string attack_uuid = 1;

  // union of all messages which might be returned as response to any attack request
  oneof response {
    // Response streamed by an bruteforce subdomain attack
    BruteforceSubdomainResponse bruteforce_subdomain = 2;
    // Response streamed by an tcp port scan attack
    TcpPortScanResponse tcp_port_scan = 3;
    // Response to a certificate transparency request
    CertificateTransparencyResponse certificate_transparency = 4;
    // Response to a service detection request
    ServiceDetectionResponse service_detection = 5;
    // Response for checking which hosts are alive
    HostsAliveResponse hosts_alive = 6;
    // Response streamed by a dns resolution attack
    DnsResolutionResponse dns_resolution = 7;
    // Response streamed by a dns resolution attack
    UdpServiceDetectionResponse udp_service_detection = 8;
    // Response for running testssl.sh
    TestSSLResponse testssl = 9;
  }
}

// Implemented by kraken; allows leeches to upload results that failed to upload previously
service BacklogService {
  rpc SubmitBacklog(BacklogRequest) returns (BacklogResponse);
}